# C_Cpp_HW

./: .gitignore  CMakeLists.txt  Makefile  README.md  data.json  interface.c.gcov  main.c
.github/workflows/: ci.yml
add_composition/: CMakeLists.txt
consistent_algorithm/: CMakeLists.txt  consistent_algorithm.c  consistent_algorithm.h  consistent_series.h
interface/: CMakeLists.txt  interface.c  interface.h  sequence_generator.c
linters/: run.sh
parallel_algorithm/: CMakeLists.txt  parallel_algorithm.c  parallel_series.h
src/: main.c
string_io/: CMakeLists.txt  string_io.c
tests/: CMakeLists.txt  test.cpp
view_composition/: CMakeLists.txt  view_composition.c
