cmake_minimum_required(VERSION 3.0.0)
project(consistent_series)

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} ${SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC ${INTERFACE_INCLUDE_DIRS} PARENT_SCOPE)
target_link_libraries(${PROJECT_NAME} PRIVATE ${INTERFACE_LIBRARIES})

# set(ADD_COMPOSITION_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
# set(ADD_COMPOSITION_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
