cmake_minimum_required(VERSION 3.0.0)
project(interface)

set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fprofile-arcs -ftest-coverage -fPIC -O0")

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} ${SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC ${PARALLEL_ALGORITHM_INCLUDE_DIRS} PARENT_SCOPE)
target_link_libraries(${PROJECT_NAME} PRIVATE ${PARALLEL_ALGORITHM_LIBRARIES})

target_include_directories(${PROJECT_NAME} PUBLIC ${CONSISTENT_ALGORITHM_INCLUDE_DIRS} PARENT_SCOPE)
target_link_libraries(${PROJECT_NAME} PRIVATE ${CONSISTENT_ALGORITHM_LIBRARIES})

set(INTERFACE_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(INTERFACE_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
