cmake_minimum_required(VERSION 3.0.0)
project(view_composition)

set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fprofile-arcs -ftest-coverage -fPIC -O0")

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} ${SOURCES})

target_include_directories(${PROJECT_NAME} PUBLIC ${STRING_IO_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PUBLIC ${COMPOSITION_STRUCT_INCLUDE_DIRS} PARENT_SCOPE)
target_link_libraries(${PROJECT_NAME} PRIVATE ${STRING_IO_LIBRARIES})

set(VIEW_COMPOSITION_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(VIEW_COMPOSITION_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
